--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,2 +1,2 @@
 backend_url =https://mbellomy81-3030.theiadockernext-0-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai
-sentiment_analyzer_url=https://sentianalyzer.1ea8k6hdad90.us-south.codeengine.appdomain.cloud/
+sentiment_analyzer_url=https://sentianalyzer.1ehil1jolevo.us-south.codeengine.appdomain.cloud/
